Adding missing files

--- a/MVC5_From_Scratch/S07_Filters/School.Web/School.Web/Views/Student/StudentAll.cshtml
+++ b/MVC5_From_Scratch/S07_Filters/School.Web/School.Web/Views/Student/StudentAll.cshtml
@@ -1,7 +1,4 @@
-﻿@using Telerik.Web.Mvc.UI;
-@using Ces.Sch.Models.Interfaces;
-
-@model IEnumerable<IStudent>
+﻿@model IEnumerable<IStudent>
 
 @{
     ViewBag.Title = "Students";
